--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --radius: 0.5rem;
+  }
+}
+.leaderboard-list {
+  position: relative;
+  /* Adjust based on your needs */
+}
+
+.leaderboard-item {
+  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.score {
+  transition: all 0.5s ease-in-out;
+}
+
+@keyframes scoreChange {
+  0% {
+    transform: scale(1);
+    background-color: transparent;
+  }
+  50% {
+    transform: scale(1.2);
+    background-color: rgba(255, 255, 0, 0.5); /* Yellow highlight */
+  }
+  100% {
+    transform: scale(1);
+    background-color: transparent;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.score-changed {
+  animation: scoreChange 0.5s ease-in-out;
 }
